--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "next": "14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwind-merge": "^2.2.0"
+    "tailwind-merge": "^2.2.0",
+    "next-themes": "^0.2.1"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
